# Code-Docuement-Generator-AgenticAI

./: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml  requirements.txt
frontend/: ingest_test.html
src/agents/: base_agent.py
src/api/: routes.py
src/api/v1/: ingest.py
src/config/: settings.py
src/core/: exceptions.py
src/models/: graph_state.py
src/utils/: ingestion_helper.py  scanner.py
tests/: git_clone.py
