[project]
name = "code-documentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn==0.51.0",
    "gitpython>=3.1.43",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "langchain-anthropic>=1.4.8",
    "langchain-core>=1.4.9",
]
